Make function correct (after changing datastore)